Stop the heartbeat executor instead of the task
Otherwise the thread is not daemon and prevents the VM from
shutting down